2005-02-20  Jean-Noel Guiheneuf <guiheneuf.jean-noel@wanadoo.fr>

	* plugins/macro/macro-dialog.c, plugins/macro/macro-edit.c :
	Fixed bug (Closed macro dialogs with Esc key).
	
2005-02-19  Naba Kumar  <naba@gnome.org>

	Patch from Sebastien Granjoux  <seb.sfo@free.fr>

	* configure.in, plugins/project-wizard/templates/Makefile.am,
	(new) plugins/project-wizard/templates/xlib*,
	(new) plugins/project-wizard/templates/xlib-dock*,
	(new) plugins/project-wizard/templates/wxwin*: Added project templates for
	xlib, xlib-dock and wxWidgets.
	
2005-02-18  Naba Kumar  <naba@gnome.org>

	* plugins/Makefile.am: Added class-gen
	
2005-02-17  Sebastien Granjoux  <seb.sfo@free.fr>

	* plugins/project-wizard/header.c:
	Fix a bug in sorting of project categories

2005-02-18  Naba Kumar  <naba@gnome.org>

	Patch from Massimo Cora  <maxcvs@email.it>:
	
	* plugins/class-gen/.cvsignore,
	plugins/class-gen/Makefile.am,
	(added) plugins/class-gen/action-callbacks.c,
	(added) plugins/class-gen/action-callbacks.h,
	(added) plugins/class-gen/anjuta-class-gen.plugin.in,
	(added) plugins/class-gen/class_gen.c,
	(added) plugins/class-gen/class_gen.h,
	(added) plugins/class-gen/plugin.c,
	(added) plugins/class-gen/plugin.h: Ported class wizard to the
	new architecture.
	
	* plugins/project-manager/plugin.c: implemented add_source().

2005-02-17  Naba Kumar  <naba@gnome.org>

	* plugins/file-loader/plugin.c: Fixed possible crash.
	
	* src/action-callbacks.c, src/action-callbacks.h,
	src/anjuta-actions.h, src/anjuta.ui: Fixed help menuitems.

2005-02-17  Naba Kumar  <naba@gnome.org>
	
	* plugins/project-wizard/templates/anjuta-plugin.wiz,
	plugins/project-wizard/templates/gnome.wiz,
	plugins/project-wizard/templates/gtk.wiz,
	plugins/project-wizard/templates/gtkmm.wiz,
	plugins/project-wizard/templates/terminal.wiz,
	plugins/project-wizard/templates/anjuta-plugin/src/plugin.c,
	plugins/project-wizard/templates/anjuta-plugin/src/plugin.h,
	plugins/project-wizard/templates/gnome/src/callbacks.c,